added plots and shreyas shap code

--- a/Toy_model_SHAP_PLS/toy_model.ipynb
+++ b/Toy_model_SHAP_PLS/toy_model.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "id": "9c98bf1b",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "id": "208a9a35",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "id": "36949d30",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "id": "03c0a24d",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "id": "dffeb937",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "id": "c75fce9e",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "id": "b0c42fec",
    "metadata": {},
    "outputs": [
@@ -317,6 +317,87 @@
     "\n",
     "# waterfall plot for first observation\n",
     "shap.plots.waterfall(shap_values[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "c9190c5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.cross_decomposition import PLSRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.mixture import BayesianGaussianMixture as BGMM\n",
+    "import shap\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Scale features for PLS regression\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(dist)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "faf14a98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train PLS regression model\n",
+    "pls = PLSRegression(n_components=3)\n",
+    "pls.fit(X_scaled, projs)\n",
+    "\n",
+    "# Compute predictions\n",
+    "y_pred = pls.predict(X_scaled)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "2f2f6be3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Compute SHAP values using LinearExplainer\n",
+    "explainer = shap.LinearExplainer(pls, X_scaled)\n",
+    "shap_values = explainer.shap_values(X_scaled)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "115b0380",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "avg_shap_values = np.mean(np.abs(shap_values), axis=0)\n",
+    "avg_shap_df = pd.DataFrame({'Feature': housing.feature_names, 'Average_SHAP_Value': avg_shap_values}).sort_values(by='Average_SHAP_Value', ascending=False)\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(range(len(avg_shap_df)), avg_shap_df['Average_SHAP_Value'], tick_label=avg_shap_df['Feature'])\n",
+    "plt.xlabel('Feature')\n",
+    "plt.ylabel('Average SHAP Value')\n",
+    "plt.title('Average SHAP Values per Feature')\n",
+    "plt.xticks(rotation=45, ha='right')\n",
+    "plt.tight_layout()\n",
+    "#plt.savefig('average_shap_bar_plot.png')\n",
+    "\n"
    ]
   }
  ],
